# SecCheck

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: cli.py
app/analyzers/: __init__.py  heuristics.py  normalizer.py  scoring.py
app/models/: __init__.py  connection.py  finding.py  report.py  scan_result.py
app/reporters/: __init__.py  json_reporter.py  llm_reporter.py  text_reporter.py
app/scanners/: __init__.py  auth_logs.py  base.py  cron.py  docker.py  fail2ban.py  files.py  firewall.py  network.py  processes.py  rootkits.py  services.py  ssh_keys.py  sshd_config.py  systemd.py  users.py
app/ssh/: __init__.py  client.py  errors.py  executor.py
app/utils/: ssh_config.py
docs/: PRD.md
tests/: test_llm_reporter.py  test_new_scanners.py  test_scanners.py  test_scoring.py  test_ssh_client.py  test_ssh_config.py
