[project]
name = "sec-check"
version = "0.1.0"
description = "CLI de auditoria remota de segurança Linux via SSH"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "paramiko>=4.0.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.scripts]
sec-check = "app.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
